# ActisensePlugin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION.cmake  appveyor.yml
inc/: actisense_device.h  actisense_ebl.h  actisense_icons.h  actisense_interface.h  actisense_ngt1.h  actisense_plugin.h  actisense_settings.h  actisense_settingsbase.h  actisense_signalkdb.h  actisense_signalkserver.h  actisense_signalksocket.h  actisense_signalkweb.h  twocanerror.h  twocanutils.h  version.h
po/: POTFILES.in
src/: actisense_device.cpp  actisense_ebl.cpp  actisense_icons.cpp  actisense_interface.cpp  actisense_ngt1.cpp  actisense_plugin.cpp  actisense_settings.cpp  actisense_settingsbase.cpp  actisense_signalkdb.cpp  actisense_signalkserver.cpp  actisense_signalksocket.cpp  actisense_signalkweb.cpp  twocanerror.cpp  twocanutils.cpp
